// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should render component 1`] = `
<Spinner>
  <div>
    <svg
      className="spinner size-medium"
      height={48}
      viewBox="0 0 48 48"
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={24}
        cy={24}
        r={23}
      />
    </svg>
  </div>
</Spinner>
`;

exports[`<Spinner /> should render component with different sizes 1`] = `
<Spinner>
  <div>
    <svg
      className="spinner size-medium"
      height={48}
      viewBox="0 0 48 48"
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={24}
        cy={24}
        r={23}
      />
    </svg>
  </div>
</Spinner>
`;

exports[`<Spinner /> should render component with different sizes 2`] = `
<Spinner
  size="small"
>
  <div>
    <svg
      className="spinner size-small"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={10}
        cy={10}
        r={9}
      />
    </svg>
  </div>
</Spinner>
`;

exports[`<Spinner /> should render component with different sizes 3`] = `
<Spinner
  size="medium"
>
  <div>
    <svg
      className="spinner size-medium"
      height={48}
      viewBox="0 0 48 48"
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={24}
        cy={24}
        r={23}
      />
    </svg>
  </div>
</Spinner>
`;

exports[`<Spinner /> should render component with different sizes 4`] = `
<Spinner
  size="large"
>
  <div>
    <svg
      className="spinner size-large"
      height={80}
      viewBox="0 0 80 80"
      width={80}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={40}
        cy={40}
        r={39}
      />
    </svg>
  </div>
</Spinner>
`;

exports[`<Spinner /> should render component with different sizes 5`] = `
<Spinner
  size="test"
>
  <div>
    <svg
      className="spinner size-medium"
      height={48}
      viewBox="0 0 48 48"
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle"
        cx={24}
        cy={24}
        r={23}
      />
    </svg>
  </div>
</Spinner>
`;
